--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ div {
     position: absolute;
     left: 25%;
     width: 50%;
+    margin-top: 30px;
+    padding: 30px;
+    box-shadow: 0 0 10px lightgray;
 }
 
 h1 {
